--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-<router-outlet></router-outlet>
+<mat-toolbar color="primary">
+    <span [routerLink]="['/']" routerLinkActive="router-link-active">Gestrón</span>
+    <span class="example-spacer"></span>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+    <mat-icon>help</mat-icon>
+  </button>
+    <button [routerLink]="['/login']" routerLinkActive="router-link-active" mat-stroked-button color="accent" aria-label="Example icon-button with heart icon">
+    <mat-icon>person</mat-icon>
+    Iniciar sesión
+  </button>
+</mat-toolbar>
+<div class="content">
+    <router-outlet></router-outlet>
+</div>
