--- a/src/app/login-screen/login-index/login-index.component.html
+++ b/src/app/login-screen/login-index/login-index.component.html
@@ -7,13 +7,13 @@
                 <mat-card-content class="login-card formularioLogin">
                     <mat-form-field appearance="outline">
                         <mat-label>Correo</mat-label>
-                        <input formControlName="correo" matInput type="email" placeholder="yo@dominio.com">
+                        <input formControlName="email" matInput type="email" placeholder="yo@dominio.com">
                         <mat-icon matPrefix>email</mat-icon>
                         <mat-hint></mat-hint>
                     </mat-form-field>
                     <mat-form-field appearance="outline">
                         <mat-label>Contraseña</mat-label>
-                        <input formControlName="passwd" matInput type="password">
+                        <input formControlName="password" matInput type="password">
                         <mat-icon matPrefix>key</mat-icon>
                         <mat-hint></mat-hint>
                     </mat-form-field>
