--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar color="primary">
     <span [routerLink]="['/']" routerLinkActive="router-link-active">Gestrón</span>
     <span class="example-spacer"></span>
-    <span>Hola</span>
+    <span *ngIf="sesionIniciada()">Hola</span>
     <span class="example-spacer"></span>
     <button *ngIf="!sesionIniciada()" [routerLink]="['/login']" routerLinkActive="router-link-active" mat-stroked-button color="accent" aria-label="Botón iniciar sesión.">
     <mat-icon>person</mat-icon>
     Iniciar sesión
   </button>
-    <button *ngIf="sesionIniciada()" mat-stroked-button color="accent" aria-label="Botón cerrar sesión.">
+    <button *ngIf="sesionIniciada()" (click)="logout()" mat-stroked-button color="accent" aria-label="Botón cerrar sesión.">
     <mat-icon>logout</mat-icon>
     Cerrar sesión
   </button>
