--- a/src/app/login-screen/login-index/login-index.component.css
+++ b/src/app/login-screen/login-index/login-index.component.css
@@ -11,7 +11,7 @@
 .formularioLogin {
     display: flex;
     flex-direction: column;
-    width: 30em;
+    width: 27em;
 }
 
 .loginbui {
@@ -20,4 +20,13 @@
 
 p {
     margin: 1em;
+}
+
+.pBarButton {
+    width: 100%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
