--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,57 @@
-<mat-toolbar color="primary">
-    <span [routerLink]="['/']" routerLinkActive="router-link-active">Gestrón</span>
-    <span class="example-spacer"></span>
-    <span *ngIf="sesionIniciada()">Hola</span>
-    <span class="example-spacer"></span>
-    <button *ngIf="!sesionIniciada()" [routerLink]="['/login']" routerLinkActive="router-link-active" mat-stroked-button color="accent" aria-label="Botón iniciar sesión.">
-    <mat-icon>person</mat-icon>
-    Iniciar sesión
-  </button>
-    <button *ngIf="sesionIniciada()" (click)="logout()" mat-stroked-button color="accent" aria-label="Botón cerrar sesión.">
-    <mat-icon>logout</mat-icon>
-    Cerrar sesión
-  </button>
-</mat-toolbar>
-<div class="content">
-    <router-outlet></router-outlet>
-</div>
+<mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #menuLateral class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false && sesionIniciada()">
+        <mat-toolbar *ngIf="sesionIniciada()">Menú</mat-toolbar>
+        <mat-nav-list *ngIf="sesionIniciada()">
+            <mat-list-item [routerLink]="['/']" routerLinkActive="active" (click)="hideSideBar()">
+                <mat-icon>dashboard</mat-icon> <span class="spacel"></span> Dashboard
+            </mat-list-item>
+            <mat-list-item [routerLink]="['/']" routerLinkActive="active" (click)="hideSideBar()">
+                <mat-icon>category</mat-icon> <span class="spacel"></span> Gestión de artículos</mat-list-item>
+            <mat-list-item [routerLink]="['/']" routerLinkActive="active" (click)="hideSideBar()">
+                <mat-icon>mediation</mat-icon> <span class="spacel"></span> Gestión de familias</mat-list-item>
+            <mat-list-item [routerLink]="['/']" routerLinkActive="active" (click)="hideSideBar()">
+                <mat-icon>local_offer</mat-icon> <span class="spacel"></span> Gestión de tarifas</mat-list-item>
+            <mat-list-item [routerLink]="['/']" routerLinkActive="active" (click)="hideSideBar()">
+                <mat-icon>manage_accounts</mat-icon> <span class="spacel"></span> Gestión de perfiles</mat-list-item>
+            <!-- <a mat-list-item [routerLink]="['/']" routerLinkActive="router-link-active">
+                <mat-icon>dashboard</mat-icon> <span class="spacel"></span> Gestión de familias</a> -->
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <mat-toolbar color="primary">
+            <button *ngIf="sesionIniciada() && (isHandset$ | async)" (click)="menuLateral.toggle()" mat-icon-button><mat-icon>menu</mat-icon></button>
+            <span [routerLink]="['/']" routerLinkActive="router-link-active">Gestrón</span>
+            <span class="example-spacer"></span>
+
+            <button *ngIf="!sesionIniciada()" [routerLink]="['/login']" routerLinkActive="router-link-active" mat-stroked-button color="accent" aria-label="Botón iniciar sesión.">
+              <mat-icon>person</mat-icon>
+              Iniciar sesión
+            </button>
+
+
+            <button *ngIf="sesionIniciada() && user().name" mat-stroked-button color="accent" aria-label="Menú de usuario." [matMenuTriggerFor]="menuUsuario">
+              <mat-icon>person</mat-icon>
+              {{user().name}}
+            </button>
+
+            <mat-menu #menuUsuario="matMenu">
+                <button *ngIf="sesionIniciada()&& isAdmin()" mat-menu-item aria-label="Panel de administrador." [routerLink]="['/admin']" routerLinkActive="router-link-active">
+                  <mat-icon>admin_panel_settings</mat-icon>
+                  Panel de administrador
+                </button>
+                <button *ngIf="sesionIniciada()" mat-menu-item aria-label="Panel de configuración de cuenta.">
+          <mat-icon>settings</mat-icon>
+          Preferencias
+        </button>
+                <button *ngIf="sesionIniciada()" (click)="logout()" mat-menu-item aria-label="Botón cerrar sesión.">
+          <mat-icon>logout</mat-icon>
+          Cerrar sesión
+        </button>
+            </mat-menu>
+
+        </mat-toolbar>
+        <router-outlet></router-outlet>
+
+    </mat-sidenav-content>
+
+</mat-sidenav-container>
