--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,4 +2,24 @@
     flex: 1 1 auto;
 }
 
-.content {}
+.spacel {
+    width: 1em;
+}
+
+.sidenav-container {
+    height: 100%;
+}
+
+.sidenav {
+    width: 250px;
+}
+
+.sidenav .mat-toolbar {
+    background: inherit;
+}
+
+.mat-toolbar.mat-primary {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
