--- a/src/app/dashboard/dash-index/dash-index.component.html
+++ b/src/app/dashboard/dash-index/dash-index.component.html
@@ -1,3 +1,3 @@
 <p>dash-index works!</p>
-<p>Email: {{user.email}}</p>
-<p>Name: {{user.name}}</p>
+<p>Email: {{user().email}}</p>
+<p>Name: {{user().name}}</p>
