--- a/src/app/shared/loading-dialog/loading-dialog.component.html
+++ b/src/app/shared/loading-dialog/loading-dialog.component.html
@@ -1,3 +1,3 @@
 <mat-dialog-content style="display: flex; justify-content: center; align-items: center; gap: 2em;">
-    <mat-spinner color=""></mat-spinner> Conectando con el servidor.
+    <mat-spinner color="" diameter="50"></mat-spinner> Conectando con el servidor.
 </mat-dialog-content>
