--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
             <mat-list-item [routerLink]="['/']" routerLinkActive="active" (click)="hideSideBar()">
                 <mat-icon>dashboard</mat-icon> <span class="spacel"></span> Dashboard
             </mat-list-item>
-            <mat-list-item [routerLink]="['/']" routerLinkActive="active" (click)="hideSideBar()">
+            <mat-list-item [routerLink]="['/articulos']" routerLinkActive="active" (click)="hideSideBar()">
                 <mat-icon>category</mat-icon> <span class="spacel"></span> Gestión de artículos</mat-list-item>
             <mat-list-item [routerLink]="['/']" routerLinkActive="active" (click)="hideSideBar()">
                 <mat-icon>mediation</mat-icon> <span class="spacel"></span> Gestión de familias</mat-list-item>
