--- a/src/app/admin/centros/centros.component.css
+++ b/src/app/admin/centros/centros.component.css
@@ -19,7 +19,7 @@ div.backg {
 
 .floatingButton {
     float: right;
-    position: absolute;
+    position: fixed;
     bottom: 2em;
     right: 2em;
 }
