--- a/src/app/shared/connection-error/connection-error.component.html
+++ b/src/app/shared/connection-error/connection-error.component.html
@@ -1,2 +1,5 @@
 <h2 mat-dialog-title>Error al conectar</h2>
 <mat-dialog-content>Ha ocurrido un error al conectar con el servidor, vuelva a intentarlo más tarde.</mat-dialog-content>
+<mat-dialog-actions>
+    <button mat-stroked-button (click)="reintentar()">Reintentar</button>
+</mat-dialog-actions>
