--- a/src/app/admin/admindash/admindash.component.html
+++ b/src/app/admin/admindash/admindash.component.html
@@ -1,10 +1,10 @@
 <div class="backg">
     <mat-card>
         <mat-card-content>
-            <div class="progressspin" *ngIf="usuarios.length<1">
+            <div class="progressspin" *ngIf="actualizandoUsuarios">
                 <mat-progress-spinner diameter="50" mode="indeterminate"></mat-progress-spinner>
             </div>
-            <app-tabla-usuarios *ngIf="usuarios.length>0" [usuarios]="usuarios" (updateUsuarios)="updateUsers()">
+            <app-tabla-usuarios *ngIf="!actualizandoUsuarios" [usuarios]=" usuarios " (updateUsuarios)="updateUsers() ">
             </app-tabla-usuarios>
         </mat-card-content>
     </mat-card>
