--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,18 +7,18 @@
             </mat-list-item>
             <mat-list-item [routerLink]="['/articulos']" routerLinkActive="active" (click)="hideSideBar()">
                 <mat-icon>category</mat-icon> <span class="spacel"></span> Gestión de artículos</mat-list-item>
-            <mat-list-item [routerLink]="['/']" routerLinkActive="active" (click)="hideSideBar()">
+            <mat-list-item [routerLink]="['/familias']" routerLinkActive="active" (click)="hideSideBar()">
                 <mat-icon>mediation</mat-icon> <span class="spacel"></span> Gestión de familias</mat-list-item>
-            <mat-list-item [routerLink]="['/']" routerLinkActive="active" (click)="hideSideBar()">
+            <mat-list-item [routerLink]="['/tarifas']" routerLinkActive="active" (click)="hideSideBar()">
                 <mat-icon>local_offer</mat-icon> <span class="spacel"></span> Gestión de tarifas</mat-list-item>
-            <mat-list-item [routerLink]="['/']" routerLinkActive="active" (click)="hideSideBar()">
+            <mat-list-item [routerLink]="['/perfiles']" routerLinkActive="active" (click)="hideSideBar()">
                 <mat-icon>manage_accounts</mat-icon> <span class="spacel"></span> Gestión de perfiles</mat-list-item>
             <!-- <a mat-list-item [routerLink]="['/']" routerLinkActive="router-link-active">
                 <mat-icon>dashboard</mat-icon> <span class="spacel"></span> Gestión de familias</a> -->
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
-        <mat-toolbar color="primary">
+        <mat-toolbar color="primary" *ngIf="sesionIniciada()">
             <button *ngIf="sesionIniciada() && (isHandset$ | async)" (click)="menuLateral.toggle()" mat-icon-button><mat-icon>menu</mat-icon></button>
             <span [routerLink]="['/']" routerLinkActive="router-link-active">Gestrón</span>
             <span class="example-spacer"></span>
@@ -29,10 +29,11 @@
             </button>
 
 
-            <button *ngIf="sesionIniciada() && centros().length>0" mat-stroked-button color="accent" aria-label="Menú de usuario." [matMenuTriggerFor]="selectorCentro" (click)="updCentro()">
+            <button *ngIf="sesionIniciada() && centros().length>0" mat-stroked-button color="accent" [matMenuTriggerFor]="selectorCentro" (click)="updCentro()" matTooltip="Cambiar de centro" matTooltipPosition="below" matTooltipHideDelay="100" title="Cambiar de centro">
               <mat-icon>business</mat-icon>
               {{getCentroSeleccionado().nombre}}
             </button>
+
 
             <mat-menu #selectorCentro="matMenu">
                 <button mat-menu-item *ngFor="let centro of centros()" aria-label="centro.nombre" (click)="setCentro(centro)" title="Cambiar a {{centro.nombre}} ({{centro.nombre_legal}})">
@@ -43,12 +44,20 @@
 
             <span class="space2"></span>
 
-            <button *ngIf="sesionIniciada() && user().name" mat-stroked-button color="accent" aria-label="Menú de usuario." [matMenuTriggerFor]="menuUsuario">
+            <button *ngIf="sesionIniciada() && user().name && !(isHandset$ | async)" mat-stroked-button color="accent" aria-label="Menú de usuario." [matMenuTriggerFor]="menuUsuario" matTooltip="Menú de usuario" matTooltipPosition="below" matTooltipHideDelay="100"
+                title="Menú de usuario">
               <mat-icon>person</mat-icon>
               {{user().name}}
             </button>
+            <button *ngIf="sesionIniciada() && user().name && (isHandset$ | async)" mat-icon-button color="accent" aria-label="Menú de usuario." [matMenuTriggerFor]="menuUsuario">
+              <mat-icon>person</mat-icon>
+            </button>
 
             <mat-menu #menuUsuario="matMenu">
+                <menu *ngIf="sesionIniciada() && user().name && (isHandset$ | async)" mat-menu-item disabled>
+                    <mat-icon>person</mat-icon>
+                    {{user().name}}</menu>
+                <mat-divider *ngIf="sesionIniciada() && user().name && (isHandset$ | async)"></mat-divider>
                 <button *ngIf="sesionIniciada()&& isAdmin()" mat-menu-item aria-label="Panel de administrador." [routerLink]="['/admin']" routerLinkActive="router-link-active">
                   <mat-icon>admin_panel_settings</mat-icon>
                   Panel de administrador
@@ -64,7 +73,7 @@
             </mat-menu>
 
         </mat-toolbar>
-        <router-outlet></router-outlet>
+        <router-outlet *ngIf="allLoaded"></router-outlet>
 
     </mat-sidenav-content>
 
