--- a/src/app/login-screen/login-index/login-index.component.css
+++ b/src/app/login-screen/login-index/login-index.component.css
@@ -8,25 +8,73 @@
     justify-content: center;
 }
 
-.formularioLogin {
+mat-card-content {
     display: flex;
     flex-direction: column;
-    width: 27em;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
-.loginbui {
+mat-form-field {
+    width: 90%;
+}
+
+form {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+mat-card {
+    padding: 2em;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 50em;
     margin-top: 2em;
 }
 
-p {
-    margin: 1em;
+mat-card-title {
+    align-self: flex-start;
+    padding-bottom: .6em;
 }
 
 .pBarButton {
-    width: 100%;
     position: absolute;
     right: 0;
     bottom: 0;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+
+mat-card-actions {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: .2em;
+    text-align: center;
+    width: 90%;
+}
+
+img.logo {
+    width: 25em;
+    margin-top: 5em;
+    margin-bottom: 2em;
+    filter: opacity(.5);
+}
+
+@media screen and (max-width:812px) {
+    mat-card {
+        padding: 2em;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+        margin-top: 2em;
+    }
 }
