--- a/src/app/dashboard/components/tabla-familias/tabla-familias.component.html
+++ b/src/app/dashboard/components/tabla-familias/tabla-familias.component.html
@@ -1,1 +1,27 @@
-<p>tabla-familias works!</p>
+<div cdkDropListGroup class="cardgroup">
+    <mat-card *ngFor="let familia of familias">
+
+        <mat-card-title>{{familia.nombre}}</mat-card-title>
+
+        <mat-card-content cdkDropList cdkDropListSortingDisabled #familias="cdkDropList" [cdkDropListData]="familia" class="droplist" (cdkDropListDropped)="drop($event)">
+            <div *ngFor="let articulo of familia.articulos" cdkDrag class="articuloDrop" [id]="articulo.id">
+                <div class="example-custom-placeholder spacbetw" *cdkDragPlaceholder>
+                    <div class="lineaColor" style="background-color: {{articulo.color}};"></div>
+                    <span>{{articulo.nombre}}</span>
+                </div>
+                <div class="spacbetw">
+                    <div class="lineaColor" style="background-color: {{articulo.color}};"></div>
+                    <span>{{articulo.nombre}}</span>
+                </div>
+
+                <mat-icon>drag_handle</mat-icon>
+            </div>
+
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-flat-button color="warn" (click)="destroy(familia)"><mat-icon>delete</mat-icon> Eliminar</button>
+            <button mat-flat-button color="accent" (click)="edit(familia)"><mat-icon>edit</mat-icon> Editar</button>
+        </mat-card-actions>
+
+    </mat-card>
+</div>
