--- a/src/app/dashboard/components/tabla-articulos/tabla-articulos.component.html
+++ b/src/app/dashboard/components/tabla-articulos/tabla-articulos.component.html
@@ -16,7 +16,7 @@
         </ng-container>
         <ng-container matColumnDef="nombre_corto">
             <th mat-header-cell *matHeaderCellDef> Nombre </th>
-            <td mat-cell *matCellDef="let articulo"> {{articulo.nombre_corto}} </td>
+            <td mat-cell *matCellDef="let articulo" class="acorta"> {{articulo.nombre_corto}} </td>
         </ng-container>
         <ng-container matColumnDef="familia">
             <th mat-header-cell *matHeaderCellDef> Familia </th>
